# financetracker

./: .replit  README.md  db.sqlite3  fixture.json  manage.py  pyproject.toml
LitigationTracker/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  urls.py  views.py  widgets.py
core/templates/core/: about.html  dashboard.html
litigation/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
litigation/migrations/: 0001_initial.py  0002_alter_task_priority.py  0003_task_status_task_title_historicaltask.py  0004_historicaltask_due_date_historicaltask_user_and_more.py  0005_fund_investor_lawfirm_alter_task_options_case.py  0006_casestage_casestatus_casetype_fund_allowed_law_firms_and_more.py  0007_alter_fund_current_claims_count_and_more.py  0008_alter_fund_current_claims_sum_currency_and_more.py  0009_alter_lawfirm_case_types.py  0010_historicalinvestor_historicallawfirm.py  0011_case_case_status_case_case_type_casestage_name_and_more.py  0012_casestatus_value_historicalcasestatus_value.py
litigation/templates/litigation/: task_create.html  task_detail.html  task_form.html  task_list.html
templates/: base.html  error_404.html  error_500.html  messages.html
templates/allauth/layouts/: base.html  entrance.html  manage.html
user_management/: admin.py  models.py
user_management/migrations/: 0001_initial.py  0002_customuser_role.py  0003_customuser_created_at_customuser_updated_at_and_more.py
